...
    <string name="device_check_failed">failed</string>
    <string name="device_check_too_low_energy">too low energy</string>
    <string name="device_check_finish">You finished the device check</string>

    <!-- Tutorial !-->
    <string name="tutorial1">How do I create a new profile for the child?</string>
    <string name="tutorial11">1-1. Scan the QR code to create or find the child\'s profile</string>
    <string name="tutorial12">1-2. Fill in their personal details if the child has not been scanned before</string>
    <string name="tutorial2">How do I scan a child that is standing up?</string>
    <string name="tutorial21">2-1. Chose \"Standing up\" mode before starting to scan child</string>
    <string name="tutorial22">2-2. Take three 5 second scans, from a front view, a back view and a 360\' view</string>
    <string name="tutorial3">How do I scan a child that is lying down?</string>
    <string name="tutorial31">3-1. Choose \"Lying down\" mode before starting to scan the child</string>
    <string name="tutorial32">3-2. Take three 5 second scans, from a front view, a back view and from left side to right side</string>
    <string name="tutorial4">How do I view the results of a scan?</string>
    <string name="tutorial41">4-1. Visualise the results of the scan measurements on different graphs</string>
    <string name="tutorial42">4-2. Quickly and easily identify whether the child is likely to be malnourished</string>
    <string name="tutorial5">You can refer to the tutorial from <u color="#FF0000">Menu</u> any time!</string>
    <string name="next_tutorial">next</string>
    <string name="congratulation">Congratulations!</string>
    <string name="finish_tutorial">You finished CGM Scanner Tutorial</string>
    <string name="get_start">Get Started</string>

    <!-- Main screen !-->
    <string name="username">Username</string>
    <string name="menuScans">Select Scan Device</string>
    <string name="menuDeviceCheck">Device Check</string>
    <string name="menuTutorial">Tutorial</string>
    <string name="menuSettings">Settings</string>
    <string name="menuLanguage">Language</string>
    <string name="menuLogout">Logout</string>
    <string name="menuStdTest">Quit Std Test</string>
    <string name="menu_qr">QR Search</string>
    <string name="menu_search">Search</string>
...
