<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <RelativeLayout
...
                android:onClick="createData"
                android:visibility="gone"/>

        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navMenu"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:fitsSystemWindows="false"
            app:headerLayout="@layout/header_sidemenu"
            app:menu="@menu/menu_side"
...
