...
                        android:text="Bangladesh"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />


                    <RadioButton
                        android:id="@+id/rb_demo_qa"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:fontFamily="sans-serif-medium"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
...
                        android:visibility="gone" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnLoginMicrosoft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_transparent_white"
                android:gravity="center"
                android:padding="5dp"
                android:visibility="gone">
...
