...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calculating local files"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start Upload"/>

    </LinearLayout>

...
